# llm_relearn_unlearn

./: README.md  data_processing.py  dataset.py  main.py  model.py  pyproject.toml  testing.ipynb  train.py  utils.py
configs/: dataset.yaml  default.yaml
configs/data/: unlearn.yaml
configs/dataset/: dataset.yaml
configs/deepspeed/: zero3.json
configs/model/: llava-1.5-7b-hf.yaml  model.yaml
configs/peft/: peft.yaml
configs/trainer/: grad_ascent.yaml  grad_diff.yaml  trainer.yaml
old_scripts/: dataset.py  utils.py
src/: __init__.py
src/data/: __init__.py  collators.py  multimodal.py  utils.py
src/models/: __init__.py
src/trainers/: __init__.py  base.py  base_unlearner.py  grad_ascent.py  grad_diff.py  utils.py
