# pyproject.toml for uv package manager
[project]
name = "llm-multimodal-unlearning"
version = "0.1.0"
description = "Framework for machine unlearning on vision-language models with MLLMU-Bench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Anugrah Vaishnav", email = "your.email@example.com"}
]

keywords = [
    "machine-unlearning",
    "multimodal",
    "deepspeed",
    "vision-language-models",
    "privacy",
]

dependencies = [
    "torch>=2.0.0",
    "transformers==4.56.2",
    "deepspeed==0.17.6",
    "peft>=0.10.0",
    "accelerate>=0.27.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy==2.3.3",
    "pillow>=10.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "mpi4py>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

flash-attn = [
    "flash-attn>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-multimodal-unlearning"
Documentation = "https://github.com/yourusername/llm-multimodal-unlearning/blob/main/README.md"
Repository = "https://github.com/yourusername/llm-multimodal-unlearning"
Issues = "https://github.com/yourusername/llm-multimodal-unlearning/issues"
